# jyut-dict

./: .gitattributes  .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html
src/jyut-dict/: .clang-format  CMakeLists.txt  jyut-dict.pro  main.cpp  mainwindow.cpp
src/jyut-dict/components/: advancedtab.cpp  advancedtab.h  contacttab.cpp  contacttab.h  definitioncontentwidget.cpp  definitioncontentwidget.h  definitionheaderwidget.cpp  definitionheaderwidget.h  definitionscrollarea.cpp  definitionscrollarea.h  definitionscrollareawidget.cpp  definitionscrollareawidget.h  definitionsectionwidget.cpp  definitionsectionwidget.h  definitionwidget.cpp  definitionwidget.h  dictionarylistdelegate.cpp  dictionarylistdelegate.h  dictionarylistmodel.cpp  dictionarylistmodel.h  dictionarylistview.cpp  dictionarylistview.h  dictionarytab.cpp  dictionarytab.h  entrydelegate.cpp  entrydelegate.h  entryheaderwidget.cpp  entryheaderwidget.h  entrylistmodel.cpp  entrylistmodel.h  isearchlineedit.h  isectionheaderwidget.h  loadingwidget.cpp  loadingwidget.h  mainsplitter.cpp  mainsplitter.h  maintoolbar.cpp  maintoolbar.h  resizeablelabel.cpp  resizeablelabel.h  (+16 more)
src/jyut-dict/components/definitioncard/: definitioncardsection.cpp  definitioncardsection.h  definitioncardwidget.cpp  definitioncardwidget.h  definitioncontentwidget.cpp  definitioncontentwidget.h  definitionheaderwidget.cpp  definitionheaderwidget.h  icardheaderwidget.h
src/jyut-dict/components/dictionarylist/: dictionarylistdelegate.cpp  dictionarylistdelegate.h  dictionarylistmodel.cpp  dictionarylistmodel.h  dictionarylistview.cpp  dictionarylistview.h
src/jyut-dict/components/entrysearchresult/: resultlistdelegate.cpp  resultlistmodel.cpp  resultlistmodel.h  resultlistview.cpp  resultlistview.h
src/jyut-dict/components/entryview/: definitionscrollarea.cpp  definitionscrollarea.h  definitionscrollareawidget.cpp  definitionscrollareawidget.h  entryactionwidget.cpp  entryactionwidget.h  entrycontentwidget.cpp  entrycontentwidget.h  entryheaderwidget.cpp  entryheaderwidget.h  entryscrollarea.cpp  entryscrollarea.h  entryscrollareawidget.cpp  entryscrollareawidget.h  entryviewsentencecardsection.cpp  entryviewsentencecardsection.h
src/jyut-dict/components/favouritewindow/: favouritesplitter.cpp  favouritesplitter.h
src/jyut-dict/components/handwriting/: handwritingpanel.cpp  handwritingpanel.h
src/jyut-dict/components/historyview/: searchhistorylistdelegate.cpp  searchhistorylistdelegate.h  searchhistorylistmodel.cpp  searchhistorylistmodel.h  searchhistorylistview.cpp  searchhistorylistview.h  searchhistorytab.cpp  searchhistorytab.h  viewhistorylistdelegate.cpp  viewhistorylistdelegate.h  viewhistorylistmodel.cpp  viewhistorylistmodel.h  viewhistorylistview.cpp  viewhistorylistview.h  viewhistorytab.cpp  viewhistorytab.h
src/jyut-dict/components/layouts/: flowlayout.cpp
src/jyut-dict/components/magnifywindow/: magnifyscrollarea.cpp  magnifyscrollarea.h  magnifyscrollareawidget.cpp  magnifyscrollareawidget.h
src/jyut-dict/components/mainwindow/: isearchlineedit.h  isearchoptionsselector.h  mainsplitter.cpp  mainsplitter.h  maintoolbar.cpp  maintoolbar.h  searchlineedit.cpp  searchlineedit.h  searchoptionsradiogroupbox.cpp  searchoptionsradiogroupbox.h
src/jyut-dict/components/related/: relatedbutton.cpp  relatedbutton.h  relatedbuttoncontentwidget.cpp  relatedbuttoncontentwidget.h  relatedbuttonheaderwidget.cpp  relatedbuttonheaderwidget.h  relatedsection.cpp  relatedsection.h
src/jyut-dict/components/sentencecard/: loadingwidget.cpp  loadingwidget.h  sentencecardsection.cpp  sentencecardsection.h  sentencecardwidget.cpp  sentencecardwidget.h  sentencecontentwidget.cpp  sentencecontentwidget.h  sentenceheaderwidget.cpp  sentenceheaderwidget.h
src/jyut-dict/components/sentencesearchresult/: sentenceresultlistdelegate.cpp  sentenceresultlistdelegate.h  sentenceresultlistmodel.cpp  sentenceresultlistmodel.h  sentenceresultlistview.cpp  sentenceresultlistview.h
src/jyut-dict/components/sentenceview/: sentencescrollarea.cpp  sentencescrollarea.h  sentencescrollareawidget.cpp  sentencescrollareawidget.h  sentenceviewcontentwidget.cpp  sentenceviewcontentwidget.h  sentenceviewheaderwidget.cpp  sentenceviewheaderwidget.h  sentenceviewsentencecardsection.cpp  sentenceviewsentencecardsection.h
src/jyut-dict/components/sentencewindow/: sentencesplitter.cpp  sentencesplitter.h
src/jyut-dict/components/settings/: advancedtab.cpp  advancedtab.h  contacttab.cpp  contacttab.h  dictionarytab.cpp  dictionarytab.h  searchtab.cpp  searchtab.h  settingstab.cpp  settingstab.h  texttab.cpp  texttab.h
src/jyut-dict/dialogs/: defaultdialog.cpp  defaultdialog.h  dictionarytabfailuredialog.cpp  dictionarytabfailuredialog.h  downloadaudiodialog.cpp  downloadaudiodialog.h  downloadcompletedialog.cpp  downloadcompletedialog.h  downloadresultdialog.cpp  downloadresultdialog.h  entryspeakerrordialog.cpp  entryspeakerrordialog.h  exportdatabasedialog.cpp  exportdatabasedialog.h  handwritingerrordialog.cpp  handwritingerrordialog.h  noupdatedialog.cpp  noupdatedialog.h  overwriteconflictingdictionarydialog.cpp  overwriteconflictingdictionarydialog.h  resetsettingsdialog.cpp  resetsettingsdialog.h  restoredatabasedialog.cpp  restoredatabasedialog.h  transcriptionerrordialog.cpp  transcriptionerrordialog.h
src/jyut-dict/logic/analytics/: analytics.cpp  analytics.h  analyticsconfig.h
src/jyut-dict/logic/audio/: synthesizer_mac.h  synthesizer_mac.mm
src/jyut-dict/logic/database/: queryparseutils.cpp  queryparseutils.h  queryutils.cpp  queryutils.h  sqldatabasemanager.cpp  sqldatabasemanager.h  (+6 more)
src/jyut-dict/platform/: README.md
src/jyut-dict/resources/: resource.qrc
src/jyut-dict/windows/: aboutwindow.cpp  aboutwindow.h  handwritingwindow.cpp  handwritingwindow.h  historywindow.cpp  historywindow.h  mainwindow.cpp  mainwindow.h  settingswindow.cpp  settingswindow.h  transcriptionwindow.cpp  transcriptionwindow.h  updatewindow.cpp  updatewindow.h  welcomewindow.cpp  welcomewindow.h
(+346 files in other folders)
